[tool.poetry]
name = "pytest-bdd-ui"
version = "0.1.0"
description = ""
authors = ["oleja <asicscwcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pytest-bdd = "^8.1.0"
pytest-factoryboy = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
